# dacpp

./: .gitignore  README.md  nano.save
clang-tools-extra/translator/: ASTLib.cpp  ASTLib.hpp  CMakeLists.txt  dacInfo.cpp  output.cpp  rewriteLib.cpp  rewriteLib.h  sub_template.cpp  translator.cpp
clang-tools-extra/translator/dacppFile/: matMul.cpp
clang-tools-extra/translator/dacppLib/: Slice.h  Tensor.hpp
clang-tools-extra/translator/parser/: ASTLib.h  ASTLib2.hpp  rewriteLib.cpp  rewriteLib.h
clang-tools-extra/translator/syclFile/: a.out  output.cpp
clang-tools-extra/translator/syclLib/: DataReconstructor.cpp
clang-tools-extra/translator/test/: test.cpp  test.h
clang/tools/translator/: CMakeLists.txt  README.md  env.sh  translator.cpp  transpiler.cpp
clang/tools/translator-v2.0/: CMakeLists.txt  translator.cpp
clang/tools/translator-v2.0/dacppLib/: Slice.h
clang/tools/translator-v2.0/parser/: ASTParse.h  DacppStructure.cpp  DacppStructure.h  Param.cpp  Param.h  Split.h
clang/tools/translator-v2.0/rewriter/: Rewriter.cpp  Rewriter.h  dacInfo.h
clang/tools/translator-v2.0/test/: test.cpp  test.h
clang/tools/translator/dacdemo/: blockMatMul1.dac.cpp  blockMatMul2.dac.cpp  blockMatMulSplit.dac.cpp  blockMatmul.dac.cpp  blockMatrixMultiplication.cpp  blockMatrixMultiplication_sycl.cpp  nested_parallel.dac.cpp  waveEq.dac.cpp
clang/tools/translator/dacppLib/: Slice.h  Tensor.hpp  TensorException.hpp  Tensor_Sycl.hpp  exception.cpp  mytest.cpp  sycl_test  test.cout  test.cpp  test.out
clang/tools/translator/dacppLib/backup/: RecTensor_backup.hpp  Tensor.hpp
clang/tools/translator/dacppLib/include/: FuncTensor.hpp  ReconTensor.h  Slice.h  Tensor.hpp  dacpp.h  exception.h  myTensor.hpp
clang/tools/translator/dpcppLib/backup/: DataReconstructor.old.h  DataReconstructor_v1.cpp  DataReconstructor_v2.cpp
clang/tools/translator/dpcppLib/include/: DataReconstructor.h  ParameterGeneration.h
clang/tools/translator/dpcppLib/lib/: DataReconstructor.cpp  DataReconstructor_v1.cpp
clang/tools/translator/parseDebug/: test.h
clang/tools/translator/parser/: ASTParse.cpp  DacppStructure.cpp  DacppStructure.h
clang/tools/translator/parser/include/: ASTParse.h  Calc.h  DacppStructure.h  Param.h  Shell.h  Split.h
clang/tools/translator/parser/lib/: ASTParse.cpp  Calc.cpp  DacppStructure.cpp  Param.cpp  Shell.cpp  Split.cpp
clang/tools/translator/rewriter/: Rewriter.cpp  sub_template.h
clang/tools/translator/rewriter/include/: Buffer_memory_management.h  Rewriter.h  buffer_template.h  dacInfo.h  sub_template.h  universal_template.h  usm_template.h
clang/tools/translator/rewriter/lib/: Buffer_memory_management.cpp  Rewrite_Soft.cpp  Rewriter.cpp  Rewriter_Buffer.cpp  Rewriter_Soft.cpp  Rewriter_Soft_Buffer.cpp  Rewriter_Soft_Usm.cpp  Rewriter_Usm.cpp  buffer_template.cpp  dacInfo.cpp  dacInfo.cpp.bak  sub_template.cpp  universal_template.cpp  usm_template.cpp
clang/tools/translator/test/: test.cpp  test.h
clang/tools/translator/tests/: CMakeLists.txt  auto_test.sh  auto_test1.sh
clang/tools/translator/tests/DFT1.0/: DFT.dac.cpp  DFT.dac_sycl.cpp  DFT.serial.cpp  result.out
clang/tools/translator/tests/FOuLa0.1/: FOuLaStandardSycl.cpp  FOuLa_sycl.cpp  FOuLadac.cpp  FOuLadac_sycl.cpp  FOuLadac_sycl_rr.cpp
clang/tools/translator/tests/FOuLa1.0/: FOuLa.cpp  FOuLa.dac.cpp  FOuLa.dac_sycl.cpp  FOuLadac.cpp  FOuLadac_sycl.bak.cpp  result.out
clang/tools/translator/tests/MDP0.1/: mdp  mdp_dac_sycl.cpp  preference_distribution.csv
clang/tools/translator/tests/MDP1.0/: mdp.cpp  mdp.dac.cpp  mdp.dac_sycl.cpp  preference_distribution.txt  result.out
clang/tools/translator/tests/decay1.0/: decay_chain  decay_chain.StandardSycl.cpp  decay_chain.cpp  decay_chain.dac.cpp  decay_chain.serial.cpp  result.out
clang/tools/translator/tests/delay0.1/: decay2_chain_dac_sycl.cpp
clang/tools/translator/tests/examples/: CMakeLists.txt  DFT.dac_sycl.cpp  FOuLa_sycl.cpp  decay_chain.dac_sycl.cpp  jacobi.dac_sycl.cpp  liuliang.StandardSycl.cpp  liuliangdac_sycl.cpp  matMul.dac_sycl.cpp  matMulStandardSycl.cpp  matMuldac_sycl.cpp  stencil.dac_sycl.cpp  stencilStandardSycl.cpp  waveEquation.dac_sycl.cpp
clang/tools/translator/tests/imageAdjustment0.1/: imageAdjustment_serial
clang/tools/translator/tests/imageAdjustment1.0/: imageAdjustment.dac.cpp  imageAdjustment.dac_sycl.cpp  imageAdjustment.serial.cpp  result.out
clang/tools/translator/tests/jacobi1.0/: jacobi.cpp  jacobi.dac.cpp  jacobi.dac_sycl.cpp  jacobiStanardSycl.cpp  result.out
clang/tools/translator/tests/liuliang1.0/: density_output.csv  liuliang  liuliang.StandardSycl.cpp  liuliang.dac.cpp  liuliang.dac_sycl.cpp  liuliang.serial.cpp  liuliangdac.cpp  result.out
clang/tools/translator/tests/mandel1.0/: mandel.dac.cpp  mandel.dac_sycl.cpp  mandel.serial.cpp  result.out
clang/tools/translator/tests/matMul/: matMul.dac_sycl.cpp  matMulStandardSycl.cpp
clang/tools/translator/tests/matMul1.0/: matMul  matMul.dac.cpp  matMul.dac_sycl.cpp  matMul.serial.cpp  matMuldac.cpp  result.out
clang/tools/translator/tests/oddeven0.1/: oddEven.dac.cpp  oddEven.dac_sycl.cpp  oddEven_chuanxing.cpp  oddEven_dac.cpp  oddEven_dac_sycl.cpp  result.out
clang/tools/translator/tests/src/: BufferTemplateTest.cpp  CMakeLists.txt  DataReconstructorTest.cpp  DataReconstructorTest2.cpp  DataReconstructorTest3.cpp  DataReconstructorTest4.cpp  DataReconstructorTest5.cpp  DataReconstructorTest6.cpp  DataReconstructorTest7.cpp  ParameterGenerationTest.cpp  ParameterGenerationTest11.cpp  ParameterGenerationTest12.cpp  ParameterGenerationTest2.cpp  ParameterGenerationTest3.cpp  ParameterGenerationTest4.cpp  ParameterGenerationTest5.cpp  ParameterGenerationTest6.cpp  ParameterGenerationTest7.cpp  TestNewInterface.cpp  UsmTemplateTest.cpp  bindIndexInitTest.cpp  bindIndexInitTest2.cpp  blockMatMulTest.cpp  blockMatMulTest2.cpp  blockMatMulTest3.cpp  matmul2Test.cpp  matmulTest.cpp  vecMulScalarTest.cpp
clang/tools/translator/tests/stencil1.0/: result.out  stencil.StandardSycl.cpp  stencil.cpp  stencil.dac.cpp  (+2 more)
(+109 files in other folders)
